--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/assets/styles/bootstrap-grid.min.css",
+              "src/assets/styles/bootstrap-reboot.min.css",
+              "src/assets/styles/bootstrap-utilities.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -99,6 +103,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/assets/styles/bootstrap-grid.min.css",
+              "src/assets/styles/bootstrap-reboot.min.css",
+              "src/assets/styles/bootstrap-utilities.min.css",
               "src/styles.scss"
             ],
             "scripts": []
