--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@ctrl/ngx-codemirror": "^5.1.1",
     "codemirror": "^5.65.2",
+    "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
