--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "codemirror": "^5.65.2",
     "ngx-cookie-service": "^13.1.2",
     "ngx-quill": "^16.2.0",
+    "ngx-toastr": "^14.3.0",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
